# fishmlserv

./: Dockerfile  README.md  pyproject.toml
src/fishmlserv/: docker.py  main.py
