[project]
name = "fishmlserv"
version = "0.4.0"
description = "Default template for PDM package"
authors = [
    {name = "baechu805", email = "bjoo606@naver.com"},
]
dependencies = [
    "fastapi>=0.112.2",
    "uvicorn[standard]>=0.30.6",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
